--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "0.59.8",
+    "react-native-aws3": "^0.0.9",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-image-picker": "0.27.2",
     "react-native-svg": "^9.13.3",
