--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@react-navigation/web": "^1.0.0-alpha.9",
     "axios": "^0.19.0",
     "expo": "^35.0.0",
-    "expo-asset": "^7.0.0",
     "expo-cli": "^3.4.1",
     "expo-constants": "^7.0.0",
     "expo-font": "^7.0.0",
@@ -29,6 +28,7 @@
     "react-dom": "16.8.3",
     "react-native": "0.59.8",
     "react-native-aws3": "^0.0.9",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-image-picker": "0.27.2",
     "react-native-svg": "^9.13.3",
