--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-native-svg": "^9.13.3",
     "react-native-svg-transformer": "^0.13.0",
     "react-native-web": "^0.11.7",
-    "react-navigation": "^3.12.0"
+    "react-navigation": "3.11.3"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0",
