--- a/package.json
+++ b/package.json
@@ -12,33 +12,34 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/samples": "~3.0.3",
-    "@expo/vector-icons": "^10.0.3",
-    "@react-navigation/web": "^1.0.0-alpha.9",
-    "axios": "^0.19.0",
-    "expo": "^35.0.0",
-    "expo-cli": "^3.4.1",
-    "expo-constants": "^7.0.0",
-    "expo-font": "^7.0.0",
-    "expo-image-picker": "~7.0.0",
-    "expo-permissions": "~7.0.0",
-    "expo-web-browser": "^7.0.0",
-    "lottie-react-native": "^3.2.1",
+    "@expo/samples": "3.0.3",
+    "@expo/vector-icons": "10.0.3",
+    "@react-navigation/web": "1.0.0-alpha.9",
+    "axios": "0.19.0",
+    "expo": "35.0.0",
+    "expo-cli": "^3.13.1",
+    "expo-constants": "7.0.0",
+    "expo-font": "7.0.0",
+    "expo-image-picker": "7.0.0",
+    "expo-permissions": "7.0.0",
+    "expo-web-browser": "7.0.0",
+    "lottie-react-native": "3.2.1",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "0.59.8",
-    "react-native-aws3": "^0.0.9",
-    "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "~1.3.0",
+    "react-native-aws3": "0.0.9",
+    "react-native-elements": "1.2.7",
+    "react-native-gesture-handler": "1.3.0",
     "react-native-image-picker": "0.27.2",
-    "react-native-svg": "^9.13.3",
-    "react-native-svg-transformer": "^0.13.0",
-    "react-native-web": "^0.11.7",
+    "react-native-screens": "~1.0.0-alpha.23",
+    "react-native-svg": "9.13.3",
+    "react-native-svg-transformer": "0.13.0",
+    "react-native-web": "0.11.7",
     "react-navigation": "3.11.3"
   },
   "devDependencies": {
-    "babel-preset-expo": "^7.0.0",
-    "jest-expo": "^35.0.0"
+    "babel-preset-expo": "7.0.0",
+    "jest-expo": "35.0.0"
   },
   "private": true
 }
